--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -7,7 +7,7 @@
 }
 .title{
     font-weight: 700;
-    font-size: 2rem;
+    font-size: 2.8rem;
     margin-bottom: 20px;
 }
 .section-content{
@@ -91,6 +91,7 @@ main{
     align-items: center;
     gap: 70px;
     margin: 0px auto;
+    margin-bottom: 70px;
 }
 
 
@@ -123,6 +124,61 @@ main{
 }
 .timage{
     max-width: auto;
+}
+/* Features Section  */
+.features-Container{
+    display: flex;
+    max-width: 100%;
+    margin-bottom: 70px;
+    
+
+}
+.features-content{
+    max-width: 45%;
+    margin-right: 30px ;
+}
+.image-content{
+    max-width: 55%;
+
+}
+.card{
+    padding: 50px ;
+    border-radius: 10px;
+    background-color: #fff;
+    box-shadow: 0 4px 30px 0 #eeeeee;
+    margin-bottom: 20px;
+}
+.card> .description{
+    margin: 0;
+}
+.fcard-title{
+    margin-bottom: 10px;
+}
+.features-content> .title{
+    border-left: 5px solid #FF900E;
+    padding-left: 30px;
+}
+.image-content> img{
+    position: relative;
+    left: 100px;
+}
+.experience{
+    text-align: center;
+    background-color: #FF900E;
+    border-radius: 10px;
+    width: 340px ;
+    padding: 45px 15px;
+    color: #ffffff;
+    position: relative;
+    bottom: 100px;
+}
+.experience> .title{
+    font-size: 4rem;
+    margin: 0;
+}
+.experience> .sub-title{
+    font-size: 1.5rem;
+    margin: 0;
 }
 
 /* Some Facts Section */
@@ -194,7 +250,7 @@ main{
     header{
         padding: 0px;
     }
-    nav, .team-Container, .fects-info{
+    nav, .team-Container, .fects-info, .features-Container{
         flex-direction: column;
     }
     .team-content{
@@ -235,6 +291,28 @@ main{
     .Facts-Container{
         margin-top: 30px;
     }
+    .features-content, .image-content{
+        max-width: 100%;
+    }
+    .image-content> img{
+        left: 0;
+        width: 100%;
+
+    }
+    .experience{
+        bottom: 50px;
+        left: 50%;
+        width: 240px ;
+        padding: 20px 0px;
+    }
+    .experience> .title{
+        font-size: 2rem;
+        
+    }
+    .experience> .sub-title{
+        font-size: 0.75rem;
+        
+    }
 
 
     
@@ -245,11 +323,12 @@ main{
     header{
         padding: 20px;
     }
-    nav, .team-Container{
+    nav, .team-Container, .features-Container{
         flex-direction: column;
     }
     .team-content{
         text-align: center;
+
     }
     main{
         max-width: 90% ;
@@ -295,6 +374,28 @@ main{
     }
     .sponsors-container{
         margin-top: 30px;
+    }
+    .features-content, .image-content{
+        max-width: 100%;
+    }
+    .image-content> img{
+        left: 0;
+        width: 100%;
+
+    }
+    .experience{
+        bottom: 50px;
+        left: 50%;
+        width: 240px ;
+        padding: 20px 0px;
+    }
+    .experience> .title{
+        font-size: 2rem;
+        
+    }
+    .experience> .sub-title{
+        font-size: 0.75rem;
+        
     }
 
 
